# helioscope

./: .bazelrc  .coderabbit.yaml  .codespellignore  .codespellrc  .coverage  .editorconfig  .env.example  .gitattributes  .gitignore  .gitmodules  .health-dashboard.yml  .mise.toml  .pre-commit-config.yaml  .prettierignore  404.html  ADR.md  AGENTS.md  Brewfile  CHANGELOG.html  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODEX_FORKS_RESEARCH.md  CODEX_PR_LINKS.md  CODEX_PR_QUICK_REFERENCE.txt  CODEX_RESEARCH.md  CONSTITUTION.yaml  Cargo.toml  Dockerfile  ENDTOEND_PLAN.md  FUNCTIONAL_REQUIREMENTS.md  FUNDING.yml  GOVERNANCE.md  HELIOSCLI_README.md  MODULE.bazel  Makefile  OPTIMIZATION_PLAN.md  PHASE_3_FINAL_SUMMARY.md  PHASE_3_INDEX.md  PHASE_3_SUMMARY.md  (+50 more)
.cargo/: config.toml
.config/: nextest.toml
.devcontainer/: README.md  devcontainer.json
.github/: CODEOWNERS  RULESET_BASELINE.md  dependabot.yaml  dependabot.yml  pull_request_template.md  required-checks.json
.kittify/: .dashboard  metadata.yaml
.process-compose/: dev-fast.yaml  dev-full.yaml
FRs/: FR-HELIOS-001.md  FR-HELIOS-002.md  FR-HELIOS-003.md  FR-HELIOS-004.md  FR-HELIOS-005.md  FR-HELIOS-006.md  FR-HELIOS-007.md  FR-HELIOS-008.md  FR-HELIOS-009.md  FR-HELIOS-010.md
api/: index.html
artifacts/: validation-commands.json
assets/: CHANGELOG.md.-vpJITfP.js  CHANGELOG.md.-vpJITfP.lean.js  PRD.md.BN6x3-R8.js  PRD.md.BN6x3-R8.lean.js  SPEC.md.BuyUJfJ6.js  SPEC.md.BuyUJfJ6.lean.js  WORKLOG.md.DwFft3nE.js  WORKLOG.md.DwFft3nE.lean.js  api_index.md.CBbrdgPE.lean.js  app.CQJzkeAb.js  changes_README.md.x355H2Bu.js  changes_README.md.x355H2Bu.lean.js  checklists_RELEASE_CHECKLIST.md.DIwNHMI8.js  explanation_index.md.Da_YdgBu.js  explanation_index.md.Da_YdgBu.lean.js  fragemented_README.md.CSZ2SETg.js  fragemented_README.md.CSZ2SETg.lean.js  fragemented_artifacts_README.md.CXRT6_6X.lean.js  fragemented_artifacts_index.md.CHe7DCWF.js  fragemented_artifacts_index.md.CHe7DCWF.lean.js  fragemented_artifacts_merged.md.D5lPJOlr.js  fragemented_artifacts_merged.md.D5lPJOlr.lean.js  fragemented_artifacts_phase-1-closeout.md.Crk6sCv_.js  fragemented_artifacts_phase-1-closeout.md.Crk6sCv_.lean.js  fragemented_artifacts_phase-2-closeout.md.B-JdqiRy.js  fragemented_artifacts_phase-2-closeout.md.B-JdqiRy.lean.js  fragemented_artifacts_phase-2_README.md.3wK1CmXc.js  fragemented_artifacts_phase-2_README.md.3wK1CmXc.lean.js  fragemented_artifacts_phase-2_index.md.Cnjm_jsh.js  fragemented_artifacts_phase-2_index.md.Cnjm_jsh.lean.js  fragemented_artifacts_phase-2_lane-d_README.md.cv3ao1Lq.js  fragemented_artifacts_phase-2_lane-d_README.md.cv3ao1Lq.lean.js  fragemented_artifacts_phase-2_lane-d_index.md.BktdVbmv.js  fragemented_artifacts_phase-2_lane-d_index.md.BktdVbmv.lean.js  fragemented_artifacts_phase-2_lane-d_integration-matrix.md.Cr7YaeVa.js  fragemented_artifacts_phase-2_lane-d_integration-matrix.md.Cr7YaeVa.lean.js  fragemented_artifacts_phase-2_lane-d_merged.md.Bl62iTSj.js  fragemented_artifacts_phase-2_lane-d_merged.md.Bl62iTSj.lean.js  (+249 more)
changes/: README.html
crates/arch_test/: Cargo.toml
crates/arch_test/src/: boundary.rs  boundary_tests.rs  lib.rs  proptest_patterns.rs  tdd.rs
crates/arch_test/tests/: boundary_tests.rs  tdd_tests.rs
crates/harness_cache/: Cargo.toml  changes
crates/harness_cache/benches/: cache_bench.rs
crates/harness_cache/src/: lib.rs
crates/harness_cache/src/adapters/: mod.rs
crates/harness_cache/src/domain/: mod.rs
crates/harness_cache/src/ports/: mod.rs
crates/harness_checkpoint/: Cargo.toml
crates/harness_checkpoint/src/: checkpoint.rs  config.rs  error.rs  git.rs  lib.rs  store.rs
crates/harness_elicitation/: Cargo.toml
crates/harness_elicitation/src/: classifier.rs  error.rs  generator.rs  intent.rs  lib.rs
crates/harness_orchestrator/: Cargo.toml
crates/harness_orchestrator/benches/: orchestrator_bench.rs
crates/harness_orchestrator/src/: error.rs  id.rs  lib.rs  queue.rs  root_manager.rs  task.rs
crates/harness_pyo3/: Cargo.toml
crates/harness_pyo3/src/: lib.rs
crates/harness_rollback/: Cargo.toml
crates/harness_rollback/src/: lib.rs
crates/harness_runner/: Cargo.toml
crates/harness_runner/src/: lib.rs
crates/harness_spec/: Cargo.toml
crates/harness_spec/benches/: spec_bench.rs
crates/harness_spec/src/: error.rs  lib.rs  models.rs  parser.rs  validation.rs
crates/harness_teammates/: Cargo.toml
crates/harness_teammates/src/: lib.rs
crates/harness_teammates/src/adapters/: mod.rs
crates/harness_teammates/src/domain/: mod.rs
crates/harness_teammates/src/ports/: mod.rs
crates/harness_verify/: Cargo.toml
crates/harness_verify/src/: error.rs  lib.rs  pipeline.rs  result.rs  runners.rs
harness/: .coverage  __init__.py  health-compose.yaml  health.dockerfile  health.kubernetes.yaml  prometheus.yml  pyproject.toml
harness/benchmarks/: __init__.py  benchmark_runner.py  codex_concurrency_benchmark.py  extended_benchmark.py  harness_benchmark.py  llm_sla_benchmark.py  sla_benchmark.py  unified_benchmark.py
harness/schemas/: harness-evidence.schema.json  phase2-harness.schema.json
harness/scripts/: health_server.py  run-harness.py
harness/src/harness/: __init__.py  async_runtime.py  bounded_cache.py  bulkhead.py  cache.py  cache_optimized.py  cache_utils.py  circuit_breaker.py  config.py  context_compactor.py  cpu_profiler.py  delegation_protocol.py  discoverer.py  health.py  http_pool.py  id_utils.py  interfaces.py  latency_tracker.py  logging_config.py  memory_profiler.py  normalizer.py  planning.py  rate_limit.py  request_batcher.py  request_queue.py  resources.py  retry.py  runner.py  scaling.py  schema.py  scratchpad.py  session_store.py  shutdown.py  task_queue.py  teammate_registry.py  teammates.py  tracing.py  utils.py  worker_pool.py
harness/tests/: conftest.py  test_cache_classes.py  test_cache_final.py  test_cli_integration.py  test_discoverer.py  test_normalizer.py  test_perf_integration.py  test_run_harness.py  test_runner_contract.py  test_runner_unit.py  test_schema.py  test_schema_roundtrip.py  test_teammates.py  test_utils.py
(+1141 files in other folders)
