[workspace]
resolver = "2"
members = [
    "crates/harness_queue",
    "crates/harness_rollback",
    "crates/harness_runner",
    "crates/harness_scaling",
    "crates/harness_schema",
    "crates/harness_teammates",
    "crates/harness_utils",
]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
