[workspace]
resolver = "2"
members = [
    "crates/harness_queue",
    "crates/harness_rollback",
    "crates/harness_runner",
    "crates/harness_scaling",
    "crates/harness_schema",
    "crates/harness_spec",
    "crates/harness_teammates",
    "crates/harness_utils",
    "crates/harness_verify",
]
