[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "helios-router-ui"
version = "0.1.0"
description = "Helios Router - Interactive Pareto Dashboard with Streamlit, NATS integration, and provider ledger"
readme = "README.md"
requires-python = ">=3.14"
keywords = ["streamlit", "pareto", "dashboard", "provider", "ledger", "nats", "router"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
]
dependencies = [
    "streamlit>=1.44.0",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "openpyxl>=3.2.0",
    "nats>=2.6.0",
    "asyncio-mqtt>=0.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest-cov>=6.0.0",
]
server = [
    "uvicorn>=0.35.0",
    "httpx>=0.28.0",
]

[[project.authors]]
name = "Koosha Paridehpour"
email = "kooshapari@gmail.com"

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://github.com/kooshapari/helios-router"
Repository = "https://github.com/kooshapari/helios-router"

[project.scripts]
helios = "app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
]

[tool.uv]
managed = true

[tool.ruff]
line-length = 120
target-version = "py314"
exclude = [".process-compose/*", "migrations/*", "src/helios_router_ui/nats_client.py"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "S", "B", "C4", "T20"]
ignore = ["E501", "S101", "S110", "S311", "S608"]

[tool.basedpyright]
include = ["src", "app.py"]
typeCheckingMode = "standard"
pythonVersion = "3.14"
reportMissingTypeStubs = false
reportMissingImports = true

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = ["tests.*", "streamlit.*", "pandas.*", "nats.*", "helios_router_ui.nats_client", "helios_router_ui.ui.components", "helios_router_ui.db.schema"]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest-cov>=6.0.0",
]
