[package]
name = "arch_test"
version = "0.1.0"
edition = "2021"
description = "Architectural tests for heliosCLI boundary enforcement"

[dependencies]
# Test dependencies
criterion = "0.5"
proptest = "1.4"
paste = "1.0"
hexponent = "0.3"
walkdir = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustfmt-wrapper = "0.2"

# Internal crates to test
harness_cache = { path = "../harness_cache" }
harness_runner = { path = "../harness_runner" }
harness_elicitation = { path = "../harness_elicitation" }

[dev-dependencies]
# For property-based testing
proptest = "1.4"

[[test]]
name = "boundary_tests"
path = "src/boundary_tests.rs"

[[test]]
name = "dependency_tests"
path = "src/dependency_tests.rs"

[[test]]
name = "naming_tests"
path = "src/naming_tests.rs"

[[test]]
name = "property_tests"
path = "src/property_tests.rs"
