[package]
name = "harness_elicitation"
version = "0.1.0"
edition = "2021"
description = "Elicitation handler - converts natural language to specifications"

[dependencies]
harness_spec = { path = "../harness_spec" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
once_cell = "1.19"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
