[package]
name = "harness_pyo3"
version = "0.1.0"
edition = "2021"

[lib]
name = "harness_pyo3"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
