[package]
name = "harness_rollback"
version = "0.1.0"
edition = "2021"
description = "Atomic rollback engine for heliosHarness"

[dependencies]
harness_spec = { path = "../harness_spec" }
harness_checkpoint = { path = "../harness_checkpoint" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
