[package]
name = "harness_teammates"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["sync", "rt"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[lib]
path = "src/lib.rs"
